fixed book text wrapping issue

--- a/client/src/components/Book/Book.css
+++ b/client/src/components/Book/Book.css
@@ -66,7 +66,7 @@
 .book.leather.tighter .title,
 .book.leather.tightest .title {
   font-size: 13px;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 .book.leather.thick {
