--- a/client/src/pages/Bookcase/Bookcase.css
+++ b/client/src/pages/Bookcase/Bookcase.css
@@ -8,7 +8,7 @@ section#bookcase {
   /* width: 640px; */
 }
 
-section#bookcase button {
+section#bookcase button.bookcaseButton {
   background-color: rgb(146, 98, 34);
   color: white;
   border-radius: 4px;
